Deploy.yaml
# 创建命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: wenlvma-portal-user  # 项目空间名称
  labels:
    name: wenlvma-portal-user  # 标签
---
# 部署工作负载
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-portal-user # 负载名称
  namespace: wenlvma-portal-user  # 所在namespace
spec: 
  selector: 
    matchLabels:
      workloadselector: deployment-wenlvma-portal-user  # 选择器 选择标签
  replicas: 1  # pod 数量
  template:
    metadata:
      labels:
        workloadselector: deployment-wenlvma-portal-user  # 标签
    spec:
      containers:
      - name: portal-user  # 容器名称
        image: harbor.dev.wh.digitalchina.com/wenlvma/$PROJECT_IMAGE  # 镜像
        imagePullPolicy: Always # 镜像拉取策略 无论本地是否存在，总是拉取
        ports:
        - containerPort: 9091  # 端口号
          name: portal-user  # 名称
          protocol: TCP  # 协议
      imagePullSecrets:
        - name: harbor-xiaocpa-qafvw
      dnsPolicy: ClusterFirst  # dRancherNamespace规则
---
# 创建Service
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
  name: service-portal-user  # service名称
  namespace: wenlvma-portal-user
spec:
  ports:
  - port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    workloadselector: deployment-wenlvma-portal-user
  type: NodePort
---
# 创建ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-portal-user  # ingress名称
  namespace: wenlvma-portal-user  # 命名空间
spec:
  rules:
  - host: wenlvma-portal-user.dev.wh.digitalchina.com  #设置访问地址
    http:
      paths:
      - backend:
          serviceName: service-portal-user  # 服务名称
          servicePort: 80  # 访问端口
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - wenlvma-portal-user.dev.wh.digitalchina.com
    secretName: whdc-cert
